[project]
name = "sybex-node-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gql[all]>=4.0.0",
    "ipfshttpclient>=0.7.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "pyinstaller>=6.17.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "trafilatura>=2.0.0",
    "web3>=7.14.0",
]
